bison_compiled/chusco.output
Grammar

    0 $accept: programa $end

    1 programa: definicion_programa
    2         | definicion_libreria

    3 definicion_programa: PROGRAMA IDENTIFICADOR ';' codigo_programa

    4 codigo_programa: libreria_ast cuerpo_subprograma
    5                | ε

    6 libreria: IMPORTAR LIBRERIA nombre ';'
    7         | IMPORTAR LIBRERIA nombre COMO IDENTIFICADOR ';'
    8         | DE LIBRERIA nombre IMPORTAR identificador_rep_comas ';'
    9         | error ';'

   10 nombre: IDENTIFICADOR
   11       | nombre CUATRO_PUNTOS IDENTIFICADOR

   12 definicion_libreria: LIBRERIA IDENTIFICADOR ';' codigo_libreria
   13                    | error

   14 codigo_libreria: libreria_ast declaracion_rep
   15                | libreria_ast exportaciones declaracion_rep

   16 exportaciones: EXPORTAR nombre_rep_comas ';'
   17              | error '\n'

   18 declaracion: declaracion_objeto
   19            | declaracion_tipo
   20            | declaracion_subprograma

   21 declaracion_objeto: identificador_rep_comas ':' CONSTANTE especificacion_tipo ASIGNACION expresion ';'
   22                   | identificador_rep_comas ':' especificacion_tipo ';'
   23                   | identificador_rep_comas ':' especificacion_tipo ASIGNACION expresion ';'
   24                   | identificador_rep_comas ':' error

   25 especificacion_tipo: nombre
   26                    | tipo_no_estructurado
   27                    | error

   28 declaracion_tipo: TIPO IDENTIFICADOR ES tipo_no_estructurado ';'
   29                 | TIPO IDENTIFICADOR ES tipo_estructurado

   30 tipo_no_estructurado: tipo_escalar
   31                     | tipo_tabla
   32                     | tipo_diccionario

   33 tipo_escalar: SIGNO tipo_basico longitud RANGO rango
   34             | SIGNO tipo_basico longitud
   35             | SIGNO tipo_basico RANGO rango
   36             | SIGNO tipo_basico
   37             | tipo_basico longitud
   38             | tipo_basico longitud RANGO rango
   39             | tipo_basico RANGO rango
   40             | tipo_basico

   41 longitud: CORTO
   42         | LARGO

   43 tipo_basico: BOOLEANO
   44            | CARACTER
   45            | ENTERO
   46            | REAL

   47 rango: expresion DOS_PUNTOS expresion
   48      | expresion DOS_PUNTOS expresion DOS_PUNTOS expresion

   49 tipo_tabla: TABLA '(' expresion DOS_PUNTOS expresion ')' DE especificacion_tipo
   50           | LISTA DE especificacion_tipo

   51 tipo_diccionario: DICCIONARIO DE especificacion_tipo

   52 tipo_estructurado: tipo_registro
   53                  | tipo_enumerado
   54                  | clase

   55 tipo_registro: REGISTRO campo_rep FIN REGISTRO

   56 campo: identificador_rep_comas ':' especificacion_tipo ';'
   57      | identificador_rep_comas ':' especificacion_tipo ASIGNACION expresion ';'

   58 tipo_enumerado: ENUMERACION DE tipo_escalar elemento_enumeracion_rep_comas FIN ENUMERACION
   59               | ENUMERACION elemento_enumeracion_rep_comas FIN ENUMERACION

   60 elemento_enumeracion: IDENTIFICADOR ASIGNACION expresion
   61                     | IDENTIFICADOR

   62 clase: CLASE ULTIMA superclases declaracion_componente_rep FIN CLASE
   63      | CLASE superclases declaracion_componente_rep FIN CLASE
   64      | CLASE ULTIMA declaracion_componente_rep FIN CLASE
   65      | CLASE declaracion_componente_rep FIN CLASE
   66      | error

   67 superclases: '(' nombre_rep_comas ')'

   68 declaracion_componente: visibilidad componente
   69                       | componente

   70 visibilidad: PUBLICO
   71            | PROTEGIDO
   72            | PRIVADO

   73 componente: declaracion_tipo
   74           | declaracion_objeto
   75           | modificador_ast_comas_1 declaracion_subprograma

   76 modificador: CONSTRUCTOR
   77            | DESTRUCTOR
   78            | GENERICO
   79            | ABSTRACTO
   80            | ESPECIFICO
   81            | FINAL

   82 declaracion_subprograma: SUBPROGRAMA cabecera_subprograma cuerpo_subprograma SUBPROGRAMA

   83 cabecera_subprograma: IDENTIFICADOR parametrizacion tipo_resultado
   84                     | IDENTIFICADOR tipo_resultado
   85                     | IDENTIFICADOR parametrizacion
   86                     | IDENTIFICADOR

   87 parametrizacion: '(' declaracion_parametros_ast_puntocoma declaracion_parametros ')'

   88 declaracion_parametros: identificador_rep_comas ':' modo especificacion_tipo ASIGNACION expresion
   89                       | identificador_rep_comas ':' especificacion_tipo ASIGNACION expresion
   90                       | identificador_rep_comas ':' modo especificacion_tipo
   91                       | identificador_rep_comas ':' especificacion_tipo

   92 modo: VALOR
   93     | REFERENCIA

   94 tipo_resultado: DEVOLVER especificacion_tipo

   95 cuerpo_subprograma: declaracion_ast PRINCIPIO instruccion_rep FIN

   96 instruccion: instruccion_asignacion
   97            | instruccion_devolver
   98            | instruccion_llamada
   99            | instruccion_si
  100            | instruccion_casos
  101            | instruccion_bucle
  102            | instruccion_interrupcion
  103            | instruccion_lanzamiento_excepcion
  104            | instruccion_captura_excepcion
  105            | error ';'
  106            | ';'

  107 instruccion_asignacion: objeto op_asignacion expresion ';'

  108 op_asignacion: ASIGNACION
  109              | ASIG_SUMA
  110              | ASIG_RESTA
  111              | ASIG_MULT
  112              | ASIG_DIV
  113              | ASIG_RESTO
  114              | ASIG_POT
  115              | ASIG_DESPI
  116              | ASIG_DESPD

  117 instruccion_devolver: DEVOLVER expresion ';'
  118                     | DEVOLVER ';'

  119 instruccion_llamada: llamada_subprograma ';'

  120 llamada_subprograma: nombre '(' definicion_parametro_ast_comas_1 ')'

  121 definicion_parametro: expresion
  122                     | IDENTIFICADOR ASIGNACION expresion

  123 instruccion_si: SI expresion ENTONCES instruccion_rep SINO instruccion_rep FIN SI
  124               | SI expresion ENTONCES instruccion_rep FIN SI

  125 instruccion_casos: CASOS expresion ES caso_rep FIN CASOS

  126 caso: CUANDO entradas FLECHA instruccion_rep

  127 entradas: entrada_rep_dospuntos entrada

  128 entrada: expresion DOS_PUNTOS expresion
  129        | expresion
  130        | OTRO

  131 instruccion_bucle: IDENTIFICADOR ':' clausula_iteracion instruccion_rep FIN BUCLE
  132                  | clausula_iteracion instruccion_rep FIN BUCLE

  133 clausula_iteracion: PARA IDENTIFICADOR ':' especificacion_tipo EN expresion
  134                   | PARA IDENTIFICADOR EN expresion
  135                   | REPETIR IDENTIFICADOR ':' especificacion_tipo EN rango DESCENDENTE
  136                   | REPETIR IDENTIFICADOR EN rango
  137                   | REPETIR IDENTIFICADOR ':' especificacion_tipo EN rango
  138                   | REPETIR IDENTIFICADOR EN rango DESCENDENTE
  139                   | MIENTRAS expresion

  140 instruccion_interrupcion: SIGUIENTE cuando ';'
  141                         | SIGUIENTE ';'
  142                         | SALIR DE IDENTIFICADOR cuando ';'
  143                         | SALIR ';'
  144                         | SALIR DE IDENTIFICADOR ';'
  145                         | SALIR cuando ';'

  146 cuando: CUANDO expresion

  147 instruccion_lanzamiento_excepcion: LANZA nombre ';'

  148 instruccion_captura_excepcion: PRUEBA instruccion_rep clausulas FIN PRUEBA

  149 clausulas: clausulas_excepcion clausula_finalmente
  150          | clausulas_excepcion
  151          | clausula_finalmente

  152 clausulas_excepcion: clausulas_excepcion_especifica_ast clausula_excepcion_general

  153 clausula_excepcion_especifica: EXCEPCION '(' nombre ')' instruccion_rep

  154 clausula_excepcion_general: EXCEPCION instruccion_rep

  155 clausula_finalmente: FINALMENTE instruccion_rep

  156 expresion: expresion_or
  157          | error

  158 expresion_or: expresion_or OR expresion_and
  159             | expresion_and

  160 expresion_and: expresion_and AND expresion_neg
  161              | expresion_neg

  162 expresion_neg: '~' expresion_relacional
  163              | expresion_relacional

  164 expresion_relacional: expresion_relacional operador_relacional expresion_desplazamiento
  165                     | expresion_desplazamiento

  166 operador_relacional: '<'
  167                    | '>'
  168                    | LEQ
  169                    | GEQ
  170                    | '='
  171                    | NEQ

  172 expresion_desplazamiento: expresion_desplazamiento operador_desplazamiento expresion_add
  173                         | expresion_add

  174 operador_desplazamiento: DESPI
  175                        | DESPD

  176 expresion_add: expresion_add operador_add expresion_mult_div
  177              | expresion_mult_div

  178 operador_add: '+'
  179             | '-'

  180 expresion_mult_div: expresion_mult_div operador_mult_div expresion_potencia
  181                   | expresion_potencia

  182 operador_mult_div: '*'
  183                  | '/'
  184                  | '\\'

  185 expresion_potencia: expresion_posfija '^' expresion_potencia
  186                   | expresion_posfija

  187 expresion_posfija: expresion_unaria operador_posfijo
  188                  | expresion_unaria

  189 operador_posfijo: INC
  190                 | DEC

  191 expresion_unaria: primario
  192                 | '-' primario

  193 primario: literal
  194         | objeto
  195         | llamada_subprograma
  196         | OBJETO llamada_subprograma
  197         | enumeraciones
  198         | '(' expresion ')'

  199 literal: VERDADERO
  200        | FALSO
  201        | CTC_ENTERA
  202        | CTC_REAL
  203        | CTC_CARACTER
  204        | CTC_CADENA

  205 objeto: nombre
  206       | objeto '.' IDENTIFICADOR
  207       | objeto '[' expresion_rep_comas ']'
  208       | objeto '{' ctc_cadena_rep_comas '}'

  209 enumeraciones: '[' expresion_condicional clausula_iteracion_rep ']'
  210              | '[' expresion_rep_comas ']'
  211              | '{' clave_valor_rep_comas '}'
  212              | '{' campo_valor_rep_comas '}'

  213 expresion_condicional: expresion
  214                      | SI expresion ENTONCES expresion
  215                      | SI expresion ENTONCES expresion SINO expresion

  216 clave_valor: CTC_CADENA FLECHA expresion

  217 campo_valor: IDENTIFICADOR FLECHA expresion

  218 libreria_ast: libreria_ast libreria
  219             | ε

  220 identificador_rep_comas: identificador_rep_comas ',' IDENTIFICADOR
  221                        | IDENTIFICADOR

  222 declaracion_rep: declaracion_rep declaracion
  223                | declaracion

  224 nombre_rep_comas: nombre_rep_comas ',' nombre
  225                 | nombre

  226 campo_rep: campo_rep campo
  227          | campo

  228 elemento_enumeracion_rep_comas: elemento_enumeracion_rep_comas ',' elemento_enumeracion
  229                               | elemento_enumeracion

  230 declaracion_componente_rep: declaracion_componente_rep declaracion_componente
  231                           | declaracion_componente

  232 modificador_ast_comas_1: modificador_ast_comas
  233                        | ε

  234 modificador_ast_comas: modificador_ast_comas ',' modificador
  235                      | modificador

  236 declaracion_parametros_ast_puntocoma: declaracion_parametros_ast_puntocoma declaracion_parametros ';'
  237                                     | ε

  238 declaracion_ast: declaracion_ast declaracion
  239                | ε

  240 instruccion_rep: instruccion_rep instruccion
  241                | instruccion

  242 definicion_parametro_ast_comas_1: definicion_parametro_ast_comas
  243                                 | ε

  244 definicion_parametro_ast_comas: definicion_parametro_ast_comas ',' definicion_parametro
  245                               | definicion_parametro

  246 caso_rep: caso_rep caso
  247         | caso

  248 entrada_rep_dospuntos: entrada_rep_dospuntos entrada ':'
  249                      | ε

  250 clausulas_excepcion_especifica_ast: clausulas_excepcion_especifica_ast clausula_excepcion_especifica
  251                                   | ε

  252 clave_valor_rep_comas: clave_valor_rep_comas ',' clave_valor
  253                      | clave_valor

  254 campo_valor_rep_comas: campo_valor_rep_comas ',' campo_valor
  255                      | campo_valor

  256 expresion_rep_comas: expresion_rep_comas ',' expresion
  257                    | expresion

  258 ctc_cadena_rep_comas: ctc_cadena_rep_comas ',' CTC_CADENA
  259                     | CTC_CADENA

  260 clausula_iteracion_rep: clausula_iteracion_rep clausula_iteracion
  261                       | clausula_iteracion


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 17
    '(' (40) 49 67 87 120 153 198
    ')' (41) 49 67 87 120 153 198
    '*' (42) 182
    '+' (43) 178
    ',' (44) 220 224 228 234 244 252 254 256 258
    '-' (45) 179 192
    '.' (46) 206
    '/' (47) 183
    ':' (58) 21 22 23 24 56 57 88 89 90 91 131 133 135 137 248
    ';' (59) 3 6 7 8 9 12 16 21 22 23 28 56 57 105 106 107 117 118 119 140 141 142 143 144 145 147 236
    '<' (60) 166
    '=' (61) 170
    '>' (62) 167
    '[' (91) 207 209 210
    '\\' (92) 184
    ']' (93) 207 209 210
    '^' (94) 185
    '{' (123) 208 211 212
    '}' (125) 208 211 212
    '~' (126) 162
    error (256) 9 13 17 24 27 66 105 157
    ABSTRACTO (258) 79
    BOOLEANO (259) 43
    BUCLE (260) 131 132
    CARACTER (261) 44
    CASOS (262) 125
    CLASE (263) 62 63 64 65
    COMO (264) 7
    CONSTANTE (265) 21
    CONSTRUCTOR (266) 76
    CORTO (267) 41
    CUANDO (268) 126 146
    DE (269) 8 49 50 51 58 142 144
    DESCENDENTE (270) 135 138
    DESTRUCTOR (271) 77
    DEVOLVER (272) 94 117 118
    DICCIONARIO (273) 51
    EN (274) 133 134 135 136 137 138
    ENTERO (275) 45
    ENTONCES (276) 123 124 214 215
    ENUMERACION (277) 58 59
    ES (278) 28 29 125
    ESPECIFICO (279) 80
    EXCEPCION (280) 153 154
    EXPORTAR (281) 16
    FALSO (282) 200
    FIN (283) 55 58 59 62 63 64 65 95 123 124 125 131 132 148
    FINAL (284) 81
    FINALMENTE (285) 155
    GENERICO (286) 78
    IMPORTAR (287) 6 7 8
    LARGO (288) 42
    LANZA (289) 147
    LIBRERIA (290) 6 7 8 12
    LISTA (291) 50
    MIENTRAS (292) 139
    OBJETO (293) 196
    OTRO (294) 130
    PARA (295) 133 134
    PRINCIPIO (296) 95
    PRIVADO (297) 72
    PROGRAMA (298) 3
    PROTEGIDO (299) 71
    PRUEBA (300) 148
    PUBLICO (301) 70
    RANGO (302) 33 35 38 39
    REAL (303) 46
    REFERENCIA (304) 93
    REGISTRO (305) 55
    REPETIR (306) 135 136 137 138
    SALIR (307) 142 143 144 145
    SI (308) 123 124 214 215
    SIGNO (309) 33 34 35 36
    SIGUIENTE (310) 140 141
    SINO (311) 123 215
    SUBPROGRAMA (312) 82
    TABLA (313) 49
    TIPO (314) 28 29
    ULTIMA (315) 62 64
    VALOR (316) 92
    VERDADERO (317) 199
    CTC_CARACTER (318) 203
    CTC_CADENA (319) 204 216 258 259
    IDENTIFICADOR (320) 3 7 10 11 12 28 29 60 61 83 84 85 86 122 131 133 134 135 136 137 138 142 144 206 217 220 221
    CTC_ENTERA (321) 201
    CTC_REAL (322) 202
    DOS_PUNTOS (323) 47 48 49 128
    CUATRO_PUNTOS (324) 11
    ASIGNACION (325) 21 23 57 60 88 89 108 122
    FLECHA (326) 126 216 217
    INC (327) 189
    DEC (328) 190
    DESPI (329) 174
    DESPD (330) 175
    LEQ (331) 168
    GEQ (332) 169
    NEQ (333) 171
    AND (334) 160
    OR (335) 158
    ASIG_SUMA (336) 109
    ASIG_RESTA (337) 110
    ASIG_MULT (338) 111
    ASIG_DIV (339) 112
    ASIG_RESTO (340) 113
    ASIG_POT (341) 114
    ASIG_DESPI (342) 115
    ASIG_DESPD (343) 116


Nonterminals, with rules where they appear

    $accept (110)
        on left: 0
    programa (111)
        on left: 1 2
        on right: 0
    definicion_programa (112)
        on left: 3
        on right: 1
    codigo_programa (113)
        on left: 4 5
        on right: 3
    libreria (114)
        on left: 6 7 8 9
        on right: 218
    nombre (115)
        on left: 10 11
        on right: 6 7 8 11 25 120 147 153 205 224 225
    definicion_libreria (116)
        on left: 12 13
        on right: 2
    codigo_libreria (117)
        on left: 14 15
        on right: 12
    exportaciones (118)
        on left: 16 17
        on right: 15
    declaracion (119)
        on left: 18 19 20
        on right: 222 223 238
    declaracion_objeto (120)
        on left: 21 22 23 24
        on right: 18 74
    especificacion_tipo (121)
        on left: 25 26 27
        on right: 21 22 23 49 50 51 56 57 88 89 90 91 94 133 135 137
    declaracion_tipo (122)
        on left: 28 29
        on right: 19 73
    tipo_no_estructurado (123)
        on left: 30 31 32
        on right: 26 28
    tipo_escalar (124)
        on left: 33 34 35 36 37 38 39 40
        on right: 30 58
    longitud (125)
        on left: 41 42
        on right: 33 34 37 38
    tipo_basico (126)
        on left: 43 44 45 46
        on right: 33 34 35 36 37 38 39 40
    rango (127)
        on left: 47 48
        on right: 33 35 38 39 135 136 137 138
    tipo_tabla (128)
        on left: 49 50
        on right: 31
    tipo_diccionario (129)
        on left: 51
        on right: 32
    tipo_estructurado (130)
        on left: 52 53 54
        on right: 29
    tipo_registro (131)
        on left: 55
        on right: 52
    campo (132)
        on left: 56 57
        on right: 226 227
    tipo_enumerado (133)
        on left: 58 59
        on right: 53
    elemento_enumeracion (134)
        on left: 60 61
        on right: 228 229
    clase (135)
        on left: 62 63 64 65 66
        on right: 54
    superclases (136)
        on left: 67
        on right: 62 63
    declaracion_componente (137)
        on left: 68 69
        on right: 230 231
    visibilidad (138)
        on left: 70 71 72
        on right: 68
    componente (139)
        on left: 73 74 75
        on right: 68 69
    modificador (140)
        on left: 76 77 78 79 80 81
        on right: 234 235
    declaracion_subprograma (141)
        on left: 82
        on right: 20 75
    cabecera_subprograma (142)
        on left: 83 84 85 86
        on right: 82
    parametrizacion (143)
        on left: 87
        on right: 83 85
    declaracion_parametros (144)
        on left: 88 89 90 91
        on right: 87 236
    modo (145)
        on left: 92 93
        on right: 88 90
    tipo_resultado (146)
        on left: 94
        on right: 83 84
    cuerpo_subprograma (147)
        on left: 95
        on right: 4 82
    instruccion (148)
        on left: 96 97 98 99 100 101 102 103 104 105 106
        on right: 240 241
    instruccion_asignacion (149)
        on left: 107
        on right: 96
    op_asignacion (150)
        on left: 108 109 110 111 112 113 114 115 116
        on right: 107
    instruccion_devolver (151)
        on left: 117 118
        on right: 97
    instruccion_llamada (152)
        on left: 119
        on right: 98
    llamada_subprograma (153)
        on left: 120
        on right: 119 195 196
    definicion_parametro (154)
        on left: 121 122
        on right: 244 245
    instruccion_si (155)
        on left: 123 124
        on right: 99
    instruccion_casos (156)
        on left: 125
        on right: 100
    caso (157)
        on left: 126
        on right: 246 247
    entradas (158)
        on left: 127
        on right: 126
    entrada (159)
        on left: 128 129 130
        on right: 127 248
    instruccion_bucle (160)
        on left: 131 132
        on right: 101
    clausula_iteracion (161)
        on left: 133 134 135 136 137 138 139
        on right: 131 132 260 261
    instruccion_interrupcion (162)
        on left: 140 141 142 143 144 145
        on right: 102
    cuando (163)
        on left: 146
        on right: 140 142 145
    instruccion_lanzamiento_excepcion (164)
        on left: 147
        on right: 103
    instruccion_captura_excepcion (165)
        on left: 148
        on right: 104
    clausulas (166)
        on left: 149 150 151
        on right: 148
    clausulas_excepcion (167)
        on left: 152
        on right: 149 150
    clausula_excepcion_especifica (168)
        on left: 153
        on right: 250
    clausula_excepcion_general (169)
        on left: 154
        on right: 152
    clausula_finalmente (170)
        on left: 155
        on right: 149 151
    expresion (171)
        on left: 156 157
        on right: 21 23 47 48 49 57 60 88 89 107 117 121 122 123 124 125 128 129 133 134 139 146 198 213 214 215 216 217 256 257
    expresion_or (172)
        on left: 158 159
        on right: 156 158
    expresion_and (173)
        on left: 160 161
        on right: 158 159 160
    expresion_neg (174)
        on left: 162 163
        on right: 160 161
    expresion_relacional (175)
        on left: 164 165
        on right: 162 163 164
    operador_relacional (176)
        on left: 166 167 168 169 170 171
        on right: 164
    expresion_desplazamiento (177)
        on left: 172 173
        on right: 164 165 172
    operador_desplazamiento (178)
        on left: 174 175
        on right: 172
    expresion_add (179)
        on left: 176 177
        on right: 172 173 176
    operador_add (180)
        on left: 178 179
        on right: 176
    expresion_mult_div (181)
        on left: 180 181
        on right: 176 177 180
    operador_mult_div (182)
        on left: 182 183 184
        on right: 180
    expresion_potencia (183)
        on left: 185 186
        on right: 180 181 185
    expresion_posfija (184)
        on left: 187 188
        on right: 185 186
    operador_posfijo (185)
        on left: 189 190
        on right: 187
    expresion_unaria (186)
        on left: 191 192
        on right: 187 188
    primario (187)
        on left: 193 194 195 196 197 198
        on right: 191 192
    literal (188)
        on left: 199 200 201 202 203 204
        on right: 193
    objeto (189)
        on left: 205 206 207 208
        on right: 107 194 206 207 208
    enumeraciones (190)
        on left: 209 210 211 212
        on right: 197
    expresion_condicional (191)
        on left: 213 214 215
        on right: 209
    clave_valor (192)
        on left: 216
        on right: 252 253
    campo_valor (193)
        on left: 217
        on right: 254 255
    libreria_ast (194)
        on left: 218 219
        on right: 4 14 15 218
    identificador_rep_comas (195)
        on left: 220 221
        on right: 8 21 22 23 24 56 57 88 89 90 91 220
    declaracion_rep (196)
        on left: 222 223
        on right: 14 15 222
    nombre_rep_comas (197)
        on left: 224 225
        on right: 16 67 224
    campo_rep (198)
        on left: 226 227
        on right: 55 226
    elemento_enumeracion_rep_comas (199)
        on left: 228 229
        on right: 58 59 228
    declaracion_componente_rep (200)
        on left: 230 231
        on right: 62 63 64 65 230
    modificador_ast_comas_1 (201)
        on left: 232 233
        on right: 75
    modificador_ast_comas (202)
        on left: 234 235
        on right: 232 234
    declaracion_parametros_ast_puntocoma (203)
        on left: 236 237
        on right: 87 236
    declaracion_ast (204)
        on left: 238 239
        on right: 95 238
    instruccion_rep (205)
        on left: 240 241
        on right: 95 123 124 126 131 132 148 153 154 155 240
    definicion_parametro_ast_comas_1 (206)
        on left: 242 243
        on right: 120
    definicion_parametro_ast_comas (207)
        on left: 244 245
        on right: 242 244
    caso_rep (208)
        on left: 246 247
        on right: 125 246
    entrada_rep_dospuntos (209)
        on left: 248 249
        on right: 127 248
    clausulas_excepcion_especifica_ast (210)
        on left: 250 251
        on right: 152 250
    clave_valor_rep_comas (211)
        on left: 252 253
        on right: 211 252
    campo_valor_rep_comas (212)
        on left: 254 255
        on right: 212 254
    expresion_rep_comas (213)
        on left: 256 257
        on right: 207 210 256
    ctc_cadena_rep_comas (214)
        on left: 258 259
        on right: 208 258
    clausula_iteracion_rep (215)
        on left: 260 261
        on right: 209 260


State 0

    0 $accept: • programa $end

    error     shift, and go to state 1
    LIBRERIA  shift, and go to state 2
    PROGRAMA  shift, and go to state 3

    programa             go to state 4
    definicion_programa  go to state 5
    definicion_libreria  go to state 6


State 1

   13 definicion_libreria: error •

    $default  reduce using rule 13 (definicion_libreria)


State 2

   12 definicion_libreria: LIBRERIA • IDENTIFICADOR ';' codigo_libreria

    IDENTIFICADOR  shift, and go to state 7


State 3

    3 definicion_programa: PROGRAMA • IDENTIFICADOR ';' codigo_programa

    IDENTIFICADOR  shift, and go to state 8


State 4

    0 $accept: programa • $end

    $end  shift, and go to state 9


State 5

    1 programa: definicion_programa •

    $default  reduce using rule 1 (programa)


State 6

    2 programa: definicion_libreria •

    $default  reduce using rule 2 (programa)


State 7

   12 definicion_libreria: LIBRERIA IDENTIFICADOR • ';' codigo_libreria

    ';'  shift, and go to state 10


State 8

    3 definicion_programa: PROGRAMA IDENTIFICADOR • ';' codigo_programa

    ';'  shift, and go to state 11


State 9

    0 $accept: programa $end •

    $default  accept


State 10

   12 definicion_libreria: LIBRERIA IDENTIFICADOR ';' • codigo_libreria

    $default  reduce using rule 219 (libreria_ast)

    codigo_libreria  go to state 12
    libreria_ast     go to state 13


State 11

    3 definicion_programa: PROGRAMA IDENTIFICADOR ';' • codigo_programa

    $end      reduce using rule 5 (codigo_programa)
    $default  reduce using rule 219 (libreria_ast)

    codigo_programa  go to state 14
    libreria_ast     go to state 15


State 12

   12 definicion_libreria: LIBRERIA IDENTIFICADOR ';' codigo_libreria •

    $default  reduce using rule 12 (definicion_libreria)


State 13

   14 codigo_libreria: libreria_ast • declaracion_rep
   15                | libreria_ast • exportaciones declaracion_rep
  218 libreria_ast: libreria_ast • libreria

    error          shift, and go to state 16
    DE             shift, and go to state 17
    EXPORTAR       shift, and go to state 18
    IMPORTAR       shift, and go to state 19
    SUBPROGRAMA    shift, and go to state 20
    TIPO           shift, and go to state 21
    IDENTIFICADOR  shift, and go to state 22

    libreria                 go to state 23
    exportaciones            go to state 24
    declaracion              go to state 25
    declaracion_objeto       go to state 26
    declaracion_tipo         go to state 27
    declaracion_subprograma  go to state 28
    identificador_rep_comas  go to state 29
    declaracion_rep          go to state 30


State 14

    3 definicion_programa: PROGRAMA IDENTIFICADOR ';' codigo_programa •

    $default  reduce using rule 3 (definicion_programa)


State 15

    4 codigo_programa: libreria_ast • cuerpo_subprograma
  218 libreria_ast: libreria_ast • libreria

    error     shift, and go to state 31
    DE        shift, and go to state 17
    IMPORTAR  shift, and go to state 19

    PRINCIPIO      reduce using rule 239 (declaracion_ast)
    SUBPROGRAMA    reduce using rule 239 (declaracion_ast)
    TIPO           reduce using rule 239 (declaracion_ast)
    IDENTIFICADOR  reduce using rule 239 (declaracion_ast)

    libreria            go to state 23
    cuerpo_subprograma  go to state 32
    declaracion_ast     go to state 33


State 16

    9 libreria: error • ';'
   17 exportaciones: error • '\n'

    ';'   shift, and go to state 34
    '\n'  shift, and go to state 35


State 17

    8 libreria: DE • LIBRERIA nombre IMPORTAR identificador_rep_comas ';'

    LIBRERIA  shift, and go to state 36


State 18

   16 exportaciones: EXPORTAR • nombre_rep_comas ';'

    IDENTIFICADOR  shift, and go to state 37

    nombre            go to state 38
    nombre_rep_comas  go to state 39


State 19

    6 libreria: IMPORTAR • LIBRERIA nombre ';'
    7         | IMPORTAR • LIBRERIA nombre COMO IDENTIFICADOR ';'

    LIBRERIA  shift, and go to state 40


State 20

   82 declaracion_subprograma: SUBPROGRAMA • cabecera_subprograma cuerpo_subprograma SUBPROGRAMA

    IDENTIFICADOR  shift, and go to state 41

    cabecera_subprograma  go to state 42


State 21

   28 declaracion_tipo: TIPO • IDENTIFICADOR ES tipo_no_estructurado ';'
   29                 | TIPO • IDENTIFICADOR ES tipo_estructurado

    IDENTIFICADOR  shift, and go to state 43


State 22

  221 identificador_rep_comas: IDENTIFICADOR •

    $default  reduce using rule 221 (identificador_rep_comas)


State 23

  218 libreria_ast: libreria_ast libreria •

    $default  reduce using rule 218 (libreria_ast)


State 24

   15 codigo_libreria: libreria_ast exportaciones • declaracion_rep

    SUBPROGRAMA    shift, and go to state 20
    TIPO           shift, and go to state 21
    IDENTIFICADOR  shift, and go to state 22

    declaracion              go to state 25
    declaracion_objeto       go to state 26
    declaracion_tipo         go to state 27
    declaracion_subprograma  go to state 28
    identificador_rep_comas  go to state 29
    declaracion_rep          go to state 44


State 25

  223 declaracion_rep: declaracion •

    $default  reduce using rule 223 (declaracion_rep)


State 26

   18 declaracion: declaracion_objeto •

    $default  reduce using rule 18 (declaracion)


State 27

   19 declaracion: declaracion_tipo •

    $default  reduce using rule 19 (declaracion)


State 28

   20 declaracion: declaracion_subprograma •

    $default  reduce using rule 20 (declaracion)


State 29

   21 declaracion_objeto: identificador_rep_comas • ':' CONSTANTE especificacion_tipo ASIGNACION expresion ';'
   22                   | identificador_rep_comas • ':' especificacion_tipo ';'
   23                   | identificador_rep_comas • ':' especificacion_tipo ASIGNACION expresion ';'
   24                   | identificador_rep_comas • ':' error
  220 identificador_rep_comas: identificador_rep_comas • ',' IDENTIFICADOR

    ':'  shift, and go to state 45
    ','  shift, and go to state 46


State 30

   14 codigo_libreria: libreria_ast declaracion_rep •
  222 declaracion_rep: declaracion_rep • declaracion

    SUBPROGRAMA    shift, and go to state 20
    TIPO           shift, and go to state 21
    IDENTIFICADOR  shift, and go to state 22

    $default  reduce using rule 14 (codigo_libreria)

    declaracion              go to state 47
    declaracion_objeto       go to state 26
    declaracion_tipo         go to state 27
    declaracion_subprograma  go to state 28
    identificador_rep_comas  go to state 29


State 31

    9 libreria: error • ';'

    ';'  shift, and go to state 34


State 32

    4 codigo_programa: libreria_ast cuerpo_subprograma •

    $default  reduce using rule 4 (codigo_programa)


State 33

   95 cuerpo_subprograma: declaracion_ast • PRINCIPIO instruccion_rep FIN
  238 declaracion_ast: declaracion_ast • declaracion

    PRINCIPIO      shift, and go to state 48
    SUBPROGRAMA    shift, and go to state 20
    TIPO           shift, and go to state 21
    IDENTIFICADOR  shift, and go to state 22

    declaracion              go to state 49
    declaracion_objeto       go to state 26
    declaracion_tipo         go to state 27
    declaracion_subprograma  go to state 28
    identificador_rep_comas  go to state 29


State 34

    9 libreria: error ';' •

    $default  reduce using rule 9 (libreria)


State 35

   17 exportaciones: error '\n' •

    $default  reduce using rule 17 (exportaciones)


State 36

    8 libreria: DE LIBRERIA • nombre IMPORTAR identificador_rep_comas ';'

    IDENTIFICADOR  shift, and go to state 37

    nombre  go to state 50


State 37

   10 nombre: IDENTIFICADOR •

    $default  reduce using rule 10 (nombre)


State 38

   11 nombre: nombre • CUATRO_PUNTOS IDENTIFICADOR
  225 nombre_rep_comas: nombre •

    CUATRO_PUNTOS  shift, and go to state 51

    $default  reduce using rule 225 (nombre_rep_comas)


State 39

   16 exportaciones: EXPORTAR nombre_rep_comas • ';'
  224 nombre_rep_comas: nombre_rep_comas • ',' nombre

    ';'  shift, and go to state 52
    ','  shift, and go to state 53


State 40

    6 libreria: IMPORTAR LIBRERIA • nombre ';'
    7         | IMPORTAR LIBRERIA • nombre COMO IDENTIFICADOR ';'

    IDENTIFICADOR  shift, and go to state 37

    nombre  go to state 54


State 41

   83 cabecera_subprograma: IDENTIFICADOR • parametrizacion tipo_resultado
   84                     | IDENTIFICADOR • tipo_resultado
   85                     | IDENTIFICADOR • parametrizacion
   86                     | IDENTIFICADOR •

    DEVOLVER  shift, and go to state 55
    '('       shift, and go to state 56

    $default  reduce using rule 86 (cabecera_subprograma)

    parametrizacion  go to state 57
    tipo_resultado   go to state 58


State 42

   82 declaracion_subprograma: SUBPROGRAMA cabecera_subprograma • cuerpo_subprograma SUBPROGRAMA

    $default  reduce using rule 239 (declaracion_ast)

    cuerpo_subprograma  go to state 59
    declaracion_ast     go to state 33


State 43

   28 declaracion_tipo: TIPO IDENTIFICADOR • ES tipo_no_estructurado ';'
   29                 | TIPO IDENTIFICADOR • ES tipo_estructurado

    ES  shift, and go to state 60


State 44

   15 codigo_libreria: libreria_ast exportaciones declaracion_rep •
  222 declaracion_rep: declaracion_rep • declaracion
